@@ -8,24 +8,33 @@ import java.util.List;
 import java.util.Map;
 
 import com.github.tymefly.eel.EelContext;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import test.functions1.Plus1;
 import test.functions2.Plus2;
-import uk.org.webcompere.systemstubs.rules.SystemErrRule;
-import uk.org.webcompere.systemstubs.rules.SystemOutRule;
+import uk.org.webcompere.systemstubs.jupiter.SystemStub;
+import uk.org.webcompere.systemstubs.jupiter.SystemStubsExtension;
+import uk.org.webcompere.systemstubs.stream.SystemErr;
+import uk.org.webcompere.systemstubs.stream.SystemOut;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 
 /**
  * Unit test for {@link Config}
  */
-public class ConfigTest {
-    @Rule
-    public SystemOutRule stdOut = new SystemOutRule();
+@ExtendWith(SystemStubsExtension.class)
+class ConfigTest {
+    @SystemStub
+    private SystemOut stdOut;
 
-    @Rule
-    public SystemErrRule stdErr = new SystemErrRule();
+    @SystemStub
+    private SystemErr stdErr;
+
 
     private Config badOption;
     private Config scriptAndExpression;
@@ -36,8 +45,8 @@ public class ConfigTest {
     private Config maximal;
 
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() throws Exception {
         URI propertiesFile = this.getClass()
             .getClassLoader()
             .getResource("symbols-table.properties")
@@ -66,7 +75,7 @@ public class ConfigTest {
             "--udf-package", "test.functions2",
             "maximal");
 
-        stdErr.clear();              // because badOption will pollute the standard Error
+        stdErr.clear(); // because badOption will pollute the standard Error
     }
 
 
@@ -74,100 +83,98 @@ public class ConfigTest {
      * Unit test {@link Config#isValid()}
      */
     @Test
-    public void test_isValid() {
-        Assert.assertFalse("badOption", badOption.isValid());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.isValid());
-        Assert.assertTrue("requestHelp", requestHelp.isValid());
-        Assert.assertTrue("requestVersion", requestVersion.isValid());
-        Assert.assertTrue("scripted", scripted.isValid());
-        Assert.assertTrue("minimal", minimal.isValid());
-        Assert.assertTrue("maximal", maximal.isValid());
+    void test_isValid() {
+        assertFalse(badOption.isValid(), "badOption");
+        assertFalse(scriptAndExpression.isValid(), "scriptAndExpression");
+        assertTrue(requestHelp.isValid(), "requestHelp");
+        assertTrue(requestVersion.isValid(), "requestVersion");
+        assertTrue(scripted.isValid(), "scripted");
+        assertTrue(minimal.isValid(), "minimal");
+        assertTrue(maximal.isValid(), "maximal");
     }
 
     /**
      * Unit test {@link Config#requestHelp()}
      */
     @Test
-    public void test_requestHelp() {
-        Assert.assertFalse("badOption", badOption.requestHelp());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.requestHelp());
-        Assert.assertTrue("requestHelp", requestHelp.requestHelp());
-        Assert.assertFalse("requestVersion", requestVersion.requestHelp());
-        Assert.assertFalse("scripted", scripted.requestHelp());
-        Assert.assertFalse("minimal", minimal.requestHelp());
-        Assert.assertFalse("maximal", maximal.requestHelp());
+    void test_requestHelp() {
+        assertFalse(badOption.requestHelp(), "badOption");
+        assertFalse(scriptAndExpression.requestHelp(), "scriptAndExpression");
+        assertTrue(requestHelp.requestHelp(), "requestHelp");
+        assertFalse(requestVersion.requestHelp(), "requestVersion");
+        assertFalse(scripted.requestHelp(), "scripted");
+        assertFalse(minimal.requestHelp(), "minimal");
+        assertFalse(maximal.requestHelp(), "maximal");
     }
-
 
     /**
      * Unit test {@link Config#requestVersion()}
      */
     @Test
-    public void test_requestVersion() {
-        Assert.assertFalse("badOption", badOption.requestVersion());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.requestVersion());
-        Assert.assertFalse("requestHelp", requestHelp.requestVersion());
-        Assert.assertTrue("requestVersion", requestVersion.requestVersion());
-        Assert.assertFalse("scripted", scripted.requestVersion());
-        Assert.assertFalse("minimal", minimal.requestVersion());
-        Assert.assertFalse("maximal", maximal.requestVersion());
+    void test_requestVersion() {
+        assertFalse(badOption.requestVersion(), "badOption");
+        assertFalse(scriptAndExpression.requestVersion(), "scriptAndExpression");
+        assertFalse(requestHelp.requestVersion(), "requestHelp");
+        assertTrue(requestVersion.requestVersion(), "requestVersion");
+        assertFalse(scripted.requestVersion(), "scripted");
+        assertFalse(minimal.requestVersion(), "minimal");
+        assertFalse(maximal.requestVersion(), "maximal");
     }
-
 
     /**
      * Unit test {@link Config#verbose()}
      */
     @Test
-    public void test_verbose() {
-        Assert.assertFalse("badOption", badOption.verbose());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.verbose());
-        Assert.assertFalse("requestHelp", requestHelp.verbose());
-        Assert.assertFalse("requestVersion", requestVersion.verbose());
-        Assert.assertFalse("scripted", scripted.verbose());
-        Assert.assertFalse("minimal", minimal.verbose());
-        Assert.assertTrue("maximal", maximal.verbose());
+    void test_verbose() {
+        assertFalse(badOption.verbose(), "badOption");
+        assertFalse(scriptAndExpression.verbose(), "scriptAndExpression");
+        assertFalse(requestHelp.verbose(), "requestHelp");
+        assertFalse(requestVersion.verbose(), "requestVersion");
+        assertFalse(scripted.verbose(), "scripted");
+        assertFalse(minimal.verbose(), "minimal");
+        assertTrue(maximal.verbose(), "maximal");
     }
 
     /**
      * Unit test {@link Config#useEnvironmentVariables()}
      */
     @Test
-    public void test_useEnvironmentVariables() {
-        Assert.assertFalse("badOption", badOption.useEnvironmentVariables());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.useEnvironmentVariables());
-        Assert.assertFalse("requestHelp", requestHelp.useEnvironmentVariables());
-        Assert.assertFalse("requestVersion", requestVersion.useEnvironmentVariables());
-        Assert.assertFalse("scripted", scripted.useEnvironmentVariables());
-        Assert.assertFalse("minimal", minimal.useEnvironmentVariables());
-        Assert.assertTrue("maximal", maximal.useEnvironmentVariables());
+    void test_useEnvironmentVariables() {
+        assertFalse(badOption.useEnvironmentVariables(), "badOption");
+        assertFalse(scriptAndExpression.useEnvironmentVariables(), "scriptAndExpression");
+        assertFalse(requestHelp.useEnvironmentVariables(), "requestHelp");
+        assertFalse(requestVersion.useEnvironmentVariables(), "requestVersion");
+        assertFalse(scripted.useEnvironmentVariables(), "scripted");
+        assertFalse(minimal.useEnvironmentVariables(), "minimal");
+        assertTrue(maximal.useEnvironmentVariables(), "maximal");
     }
 
     /**
      * Unit test {@link Config#useProperties()}
      */
     @Test
-    public void test_useProperties() {
-        Assert.assertFalse("badOption", badOption.useProperties());
-        Assert.assertFalse("scriptAndExpression", scriptAndExpression.useProperties());
-        Assert.assertFalse("requestHelp", requestHelp.useProperties());
-        Assert.assertFalse("requestVersion", requestVersion.useProperties());
-        Assert.assertFalse("scripted", scripted.useProperties());
-        Assert.assertFalse("minimal", minimal.useProperties());
-        Assert.assertTrue("maximal", maximal.useProperties());
+    void test_useProperties() {
+        assertFalse(badOption.useProperties(), "badOption");
+        assertFalse(scriptAndExpression.useProperties(), "scriptAndExpression");
+        assertFalse(requestHelp.useProperties(), "requestHelp");
+        assertFalse(requestVersion.useProperties(), "requestVersion");
+        assertFalse(scripted.useProperties(), "scripted");
+        assertFalse(minimal.useProperties(), "minimal");
+        assertTrue(maximal.useProperties(), "maximal");
     }
 
     /**
      * Unit test {@link Config#definitions()}
      */
     @Test
-    public void test_definitions() {
-        Assert.assertEquals("badOption", Collections.emptyMap(), badOption.definitions());
-        Assert.assertEquals("scriptAndExpression", Collections.emptyMap(), scriptAndExpression.definitions());
-        Assert.assertEquals("requestHelp", Collections.emptyMap(), requestHelp.definitions());
-        Assert.assertEquals("requestVersion", Collections.emptyMap(), requestVersion.definitions());
-        Assert.assertEquals("scripted", Collections.emptyMap(), scripted.definitions());
-        Assert.assertEquals("minimal", Collections.emptyMap(), minimal.definitions());
-        Assert.assertEquals("maximal",
+    void test_definitions() {
+        assertEquals(Collections.emptyMap(), badOption.definitions(), "badOption");
+        assertEquals(Collections.emptyMap(), scriptAndExpression.definitions(), "scriptAndExpression");
+        assertEquals(Collections.emptyMap(), requestHelp.definitions(), "requestHelp");
+        assertEquals(Collections.emptyMap(), requestVersion.definitions(), "requestVersion");
+        assertEquals(Collections.emptyMap(), scripted.definitions(), "scripted");
+        assertEquals(Collections.emptyMap(), minimal.definitions(), "minimal");
+        assertEquals(
             Map.ofEntries(
                 Map.entry("key1", "value1"),
                 Map.entry("key2", ""),
@@ -175,208 +182,197 @@ public class ConfigTest {
                 Map.entry("b", "123"),
                 Map.entry("c", "Hello World"),
                 Map.entry("d", "2000-01-02T03:04:05Z")),
-            maximal.definitions());
+            maximal.definitions(),
+            "maximal");
     }
 
     /**
      * Unit test {@link Config#defaultValue()}
      */
     @Test
-    public void test_defaultValue() {
-        Assert.assertNull("badOption", badOption.defaultValue());
-        Assert.assertNull("scriptAndExpression", scriptAndExpression.defaultValue());
-        Assert.assertNull("requestHelp", requestHelp.defaultValue());
-        Assert.assertNull("requestVersion", requestVersion.defaultValue());
-        Assert.assertNull("scripted", scripted.defaultValue());
-        Assert.assertNull("minimal", minimal.defaultValue());
-        Assert.assertEquals("maximal", "<undefined>", maximal.defaultValue());
+    void test_defaultValue() {
+        assertNull(badOption.defaultValue(), "badOption");
+        assertNull(scriptAndExpression.defaultValue(), "scriptAndExpression");
+        assertNull(requestHelp.defaultValue(), "requestHelp");
+        assertNull(requestVersion.defaultValue(), "requestVersion");
+        assertNull(scripted.defaultValue(), "scripted");
+        assertNull(minimal.defaultValue(), "minimal");
+        assertEquals("<undefined>", maximal.defaultValue(), "maximal");
     }
 
     /**
      * Unit test {@link Config#precision()}
      */
     @Test
-    public void test_precision() {
-        Assert.assertEquals("badOption", EelContext.DEFAULT_PRECISION, badOption.precision());
-        Assert.assertEquals("scriptAndExpression", EelContext.DEFAULT_PRECISION, scriptAndExpression.precision());
-        Assert.assertEquals("requestHelp", EelContext.DEFAULT_PRECISION, requestHelp.precision());
-        Assert.assertEquals("requestVersion", EelContext.DEFAULT_PRECISION, requestVersion.precision());
-        Assert.assertEquals("scripted", EelContext.DEFAULT_PRECISION, scripted.precision());
-        Assert.assertEquals("minimal", EelContext.DEFAULT_PRECISION, minimal.precision());
-        Assert.assertEquals("maximal", 5, maximal.precision());
+    void test_precision() {
+        assertEquals(EelContext.DEFAULT_PRECISION, badOption.precision(), "badOption");
+        assertEquals(EelContext.DEFAULT_PRECISION, scriptAndExpression.precision(), "scriptAndExpression");
+        assertEquals(EelContext.DEFAULT_PRECISION, requestHelp.precision(), "requestHelp");
+        assertEquals(EelContext.DEFAULT_PRECISION, requestVersion.precision(), "requestVersion");
+        assertEquals(EelContext.DEFAULT_PRECISION, scripted.precision(), "scripted");
+        assertEquals(EelContext.DEFAULT_PRECISION, minimal.precision(), "minimal");
+        assertEquals(5, maximal.precision(), "maximal");
     }
 
     /**
      * Unit test {@link Config#ioLimit()}
      */
     @Test
-    public void test_ioLimit() {
-        Assert.assertEquals("badOption", EelContext.DEFAULT_IO_LIMIT, badOption.ioLimit());
-        Assert.assertEquals("scriptAndExpression", EelContext.DEFAULT_IO_LIMIT, scriptAndExpression.ioLimit());
-        Assert.assertEquals("requestHelp", EelContext.DEFAULT_IO_LIMIT, requestHelp.ioLimit());
-        Assert.assertEquals("requestVersion", EelContext.DEFAULT_IO_LIMIT, requestVersion.ioLimit());
-        Assert.assertEquals("scripted", EelContext.DEFAULT_IO_LIMIT, scripted.ioLimit());
-        Assert.assertEquals("minimal", EelContext.DEFAULT_IO_LIMIT, minimal.ioLimit());
-        Assert.assertEquals("maximal", 2048, maximal.ioLimit());
+    void test_ioLimit() {
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, badOption.ioLimit(), "badOption");
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, scriptAndExpression.ioLimit(), "scriptAndExpression");
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, requestHelp.ioLimit(), "requestHelp");
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, requestVersion.ioLimit(), "requestVersion");
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, scripted.ioLimit(), "scripted");
+        assertEquals(EelContext.DEFAULT_IO_LIMIT, minimal.ioLimit(), "minimal");
+        assertEquals(2048, maximal.ioLimit(), "maximal");
     }
 
     /**
      * Unit test {@link Config#daysInFirstWeek()}
      */
     @Test
-    public void test_daysInFirstWeek() {
-        Assert.assertEquals("badOption", 4, badOption.daysInFirstWeek());
-        Assert.assertEquals("scriptAndExpression", 4, scriptAndExpression.daysInFirstWeek());
-        Assert.assertEquals("requestHelp", 4, requestHelp.daysInFirstWeek());
-        Assert.assertEquals("requestVersion", 4, requestVersion.daysInFirstWeek());
-        Assert.assertEquals("scripted", 4, scripted.daysInFirstWeek());
-        Assert.assertEquals("minimal", 4, minimal.daysInFirstWeek());
-        Assert.assertEquals("maximal", 2, maximal.daysInFirstWeek());
+    void test_daysInFirstWeek() {
+        assertEquals(4, badOption.daysInFirstWeek(), "badOption");
+        assertEquals(4, scriptAndExpression.daysInFirstWeek(), "scriptAndExpression");
+        assertEquals(4, requestHelp.daysInFirstWeek(), "requestHelp");
+        assertEquals(4, requestVersion.daysInFirstWeek(), "requestVersion");
+        assertEquals(4, scripted.daysInFirstWeek(), "scripted");
+        assertEquals(4, minimal.daysInFirstWeek(), "minimal");
+        assertEquals(2, maximal.daysInFirstWeek(), "maximal");
     }
 
     /**
      * Unit test {@link Config#startOfWeek()}
      */
     @Test
-    public void test_startOfWeek() {
-        Assert.assertEquals("badOption", DayOfWeek.MONDAY, badOption.startOfWeek());
-        Assert.assertEquals("scriptAndExpression", DayOfWeek.MONDAY, scriptAndExpression.startOfWeek());
-        Assert.assertEquals("requestHelp", DayOfWeek.MONDAY, requestHelp.startOfWeek());
-        Assert.assertEquals("requestVersion", DayOfWeek.MONDAY, requestVersion.startOfWeek());
-        Assert.assertEquals("scripted", DayOfWeek.MONDAY, scripted.startOfWeek());
-        Assert.assertEquals("minimal", DayOfWeek.MONDAY, minimal.startOfWeek());
-        Assert.assertEquals("maximal", DayOfWeek.SUNDAY, maximal.startOfWeek());
+    void test_startOfWeek() {
+        assertEquals(DayOfWeek.MONDAY, badOption.startOfWeek(), "badOption");
+        assertEquals(DayOfWeek.MONDAY, scriptAndExpression.startOfWeek(), "scriptAndExpression");
+        assertEquals(DayOfWeek.MONDAY, requestHelp.startOfWeek(), "requestHelp");
+        assertEquals(DayOfWeek.MONDAY, requestVersion.startOfWeek(), "requestVersion");
+        assertEquals(DayOfWeek.MONDAY, scripted.startOfWeek(), "scripted");
+        assertEquals(DayOfWeek.MONDAY, minimal.startOfWeek(), "minimal");
+        assertEquals(DayOfWeek.SUNDAY, maximal.startOfWeek(), "maximal");
 
-        Assert.assertFalse("Invalid day", Config.parse("--start-of-week", "Notaday", "myExpression").isValid());
+        assertFalse(Config.parse("--start-of-week", "Notaday", "myExpression").isValid(), "Invalid day");
     }
-
 
     /**
      * Unit test {@link Config#functionList()}
      */
     @Test
-    public void test_functionList() {
-        Assert.assertEquals("badOption", Collections.emptyList(), badOption.functionList());
-        Assert.assertEquals("scriptAndExpression", Collections.emptyList(), scriptAndExpression.functionList());
-        Assert.assertEquals("requestHelp", Collections.emptyList(), requestHelp.functionList());
-        Assert.assertEquals("requestVersion", Collections.emptyList(), requestVersion.functionList());
-        Assert.assertEquals("scripted", Collections.emptyList(), scripted.functionList());
-        Assert.assertEquals("minimal", Collections.emptyList(), minimal.functionList());
-        Assert.assertEquals("maximal", List.of(Plus1.class), maximal.functionList());
+    void test_functionList() {
+        assertEquals(Collections.emptyList(), badOption.functionList(), "badOption");
+        assertEquals(Collections.emptyList(), scriptAndExpression.functionList(), "scriptAndExpression");
+        assertEquals(Collections.emptyList(), requestHelp.functionList(), "requestHelp");
+        assertEquals(Collections.emptyList(), requestVersion.functionList(), "requestVersion");
+        assertEquals(Collections.emptyList(), scripted.functionList(), "scripted");
+        assertEquals(Collections.emptyList(), minimal.functionList(), "minimal");
+        assertEquals(List.of(Plus1.class), maximal.functionList(), "maximal");
     }
 
     /**
      * Unit test {@link Config#packageList()}
      */
     @Test
-    public void test_packageList() {
-        Assert.assertEquals("badOption", Collections.emptyList(), badOption.packageList());
-        Assert.assertEquals("scriptAndExpression", Collections.emptyList(), scriptAndExpression.packageList());
-        Assert.assertEquals("requestHelp", Collections.emptyList(), requestHelp.packageList());
-        Assert.assertEquals("requestVersion", Collections.emptyList(), requestVersion.packageList());
-        Assert.assertEquals("scripted", Collections.emptyList(), scripted.packageList());
-        Assert.assertEquals("minimal", Collections.emptyList(), minimal.packageList());
-        Assert.assertEquals("maximal", List.of(Plus2.class.getPackage()), maximal.packageList());
+    void test_packageList() {
+        assertEquals(Collections.emptyList(), badOption.packageList(), "badOption");
+        assertEquals(Collections.emptyList(), scriptAndExpression.packageList(), "scriptAndExpression");
+        assertEquals(Collections.emptyList(), requestHelp.packageList(), "requestHelp");
+        assertEquals(Collections.emptyList(), requestVersion.packageList(), "requestVersion");
+        assertEquals(Collections.emptyList(), scripted.packageList(), "scripted");
+        assertEquals(Collections.emptyList(), minimal.packageList(), "minimal");
+        assertEquals(List.of(Plus2.class.getPackage()), maximal.packageList(), "maximal");
     }
 
     /**
      * Unit test {@link Config#getScriptFile()}
      */
     @Test
-    public void test_getScriptFile() {
-        Assert.assertNull("badOption", badOption.getScriptFile());
-        Assert.assertEquals("scriptAndExpression", new File("test.eel"), scriptAndExpression.getScriptFile());
-        Assert.assertNull("requestHelp", requestHelp.getScriptFile());
-        Assert.assertNull("requestVersion", requestVersion.getScriptFile());
-        Assert.assertEquals("scripted", new File("test.eel"), scripted.getScriptFile());
-        Assert.assertNull("minimal", minimal.getScriptFile());
-        Assert.assertNull("maximal", maximal.getScriptFile());
+    void test_getScriptFile() {
+        assertNull(badOption.getScriptFile(), "badOption");
+        assertEquals(new File("test.eel"), scriptAndExpression.getScriptFile(), "scriptAndExpression");
+        assertNull(requestHelp.getScriptFile(), "requestHelp");
+        assertNull(requestVersion.getScriptFile(), "requestVersion");
+        assertEquals(new File("test.eel"), scripted.getScriptFile(), "scripted");
+        assertNull(minimal.getScriptFile(), "minimal");
+        assertNull(maximal.getScriptFile(), "maximal");
     }
 
     /**
      * Unit test {@link Config#getExpression()}
      */
     @Test
-    public void test_getExpression() {
-        Assert.assertNull("badOption", badOption.getExpression());
-        Assert.assertEquals("scriptAndExpression", "myExpression", scriptAndExpression.getExpression());
-        Assert.assertNull("requestHelp", requestHelp.getExpression());
-        Assert.assertNull("requestVersion", requestVersion.getExpression());
-        Assert.assertNull("scripted", scripted.getExpression());
-        Assert.assertEquals("minimal", "minimal", minimal.getExpression());
-        Assert.assertEquals("maximal", "maximal", maximal.getExpression());
+    void test_getExpression() {
+        assertNull(badOption.getExpression(), "badOption");
+        assertEquals("myExpression", scriptAndExpression.getExpression(), "scriptAndExpression");
+        assertNull(requestHelp.getExpression(), "requestHelp");
+        assertNull(requestVersion.getExpression(), "requestVersion");
+        assertNull(scripted.getExpression(), "scripted");
+        assertEquals("minimal", minimal.getExpression(), "minimal");
+        assertEquals("maximal", maximal.getExpression(), "maximal");
     }
 
     /**
      * Unit test {@link Config#displayUsage()}
      */
     @Test
-    public void test_displayUsage() {
+    void test_displayUsage() {
         minimal.displayUsage();
 
-
-
-        Assert.assertTrue("Help message not written",
-            stdOut.getLinesNormalized().replaceAll("\r\n", "\n").startsWith("Usage:\n  java -jar evaluate-<version>.jar"));
+        assertTrue(stdOut.getLinesNormalized().replaceAll("\r\n", "\n")
+                .startsWith("Usage:\n  java -jar evaluate-<version>.jar"),
+            "Help message not written");
     }
 
     /**
      * Unit test {@link Config}
      */
     @Test
-    public void test_badPackage() {
-        Config config = Config.parse(
-            "--udf-package", "test.functions-unknown",
-            "should fail");
+    void test_badPackage() {
+        Config config = Config.parse("--udf-package", "test.functions-unknown", "should fail");
 
-        Assert.assertFalse("should not be valid", config.isValid());
-        Assert.assertTrue("Help message not written",
-            stdErr.getLinesNormalized().contains("Error: Invalid package 'test.functions-unknown'"));
+        assertFalse(config.isValid(), "should not be valid");
+        assertTrue(stdErr.getLinesNormalized().contains("Error: Invalid package 'test.functions-unknown'"),
+            "Help message not written");
     }
 
     /**
      * Unit test {@link Config}
      */
     @Test
-    public void test_badFunction() {
-        Config config = Config.parse(
-            "--udf-class", "test.function.unknown",
-            "should fail");
+    void test_badFunction() {
+        Config config = Config.parse("--udf-class", "test.function.unknown", "should fail");
 
-        Assert.assertFalse("should not be valid", config.isValid());
-        Assert.assertTrue("Help message not written",
-            stdErr.getLinesNormalized().contains("Error: Invalid function 'test.function.unknown'"));
+        assertFalse(config.isValid(), "should not be valid");
+        assertTrue(stdErr.getLinesNormalized().contains("Error: Invalid function 'test.function.unknown'"),
+            "Help message not written");
     }
 
     /**
      * Unit test {@link Config}
      */
     @Test
-    public void test_duplicateDefinition() {
-        Config config = Config.parse(
-            "--define", "key=value1",
-            "-D", "key=value2",
-            "should fail");
+    void test_duplicateDefinition() {
+        Config config = Config.parse("--define", "key=value1", "-D", "key=value2", "should fail");
 
-        Assert.assertFalse("should not be valid", config.isValid());
-        Assert.assertTrue("Error message not written",
-            stdErr.getLinesNormalized().contains("Error: 'key' is already in the symbols table"));
+        assertFalse(config.isValid(), "should not be valid");
+        assertTrue(stdErr.getLinesNormalized().contains("Error: 'key' is already in the SymbolsTable"),
+            "Error message not written");
     }
 
     /**
      * Unit test {@link Config}
      */
     @Test
-    public void test_badPropertiesFile() {
+    void test_badPropertiesFile() {
         Config config = Config.parse("--definitions", "path/to/unknown/file.xxxx");
 
-        Assert.assertFalse("should not be valid", config.isValid());
+        assertFalse(config.isValid(), "should not be valid");
 
-        String log = stdErr.getLinesNormalized()
-            .split("\n")[0]
-            .replace('\\', '/');
-        Assert.assertTrue("Error message not written",
-            log.matches("Error: Can not read file '.*/path/to/unknown/file.xxxx'"));
+        String log = stdErr.getLinesNormalized().split("\n")[0].replace('\\', '/');
+        assertTrue(log.matches("Error: Can not read file '.*/path/to/unknown/file.xxxx'"),
+            "Error message not written");
     }
-
 }
